--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -31,11 +31,18 @@ html, body{
 .dayNav{
 	background-color: #EBECE4;
 	text-align: left;
-	padding-left: 25%;
+	padding-left: 15%;
+}
+
+.dayNav:hover{
+	background-color: red;
 }
 .activityNav{
 	background-color: #ECF1EF;
-	padding-left:45%;
+	padding-left:25%;
+}
+.activityShow{
+	background-color: blue;
 }
 
 .contentImg{
