--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -35,12 +35,15 @@ html, body{
 }
 
 .dayNav:hover{
-	background-color: red;
+	background-color: #FEFFEF;
 }
 .activityNav{
 	background-color: #ECF1EF;
 	padding-left:25%;
 	display: none;
+}
+.activityNav:hover{
+	background-color: #FEFFEF;
 }
 
 .contentImg{
